Configure ResolveAI application for production deployment